--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
+    "@angular/animations": "~13.3.6",
     "@angular/cdk": "12.0.1",
-    "@angular/common": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
+    "@angular/common": "~13.3.6",
+    "@angular/compiler": "~13.3.6",
+    "@angular/core": "~13.3.6",
     "@angular/fire": "6.1.5",
-    "@angular/forms": "~12.0.1",
+    "@angular/forms": "~13.3.6",
     "@angular/material": "12.0.1",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
+    "@angular/platform-browser": "~13.3.6",
+    "@angular/platform-browser-dynamic": "~13.3.6",
+    "@angular/router": "~13.3.6",
     "firebase": "8.6.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular/cli": "^12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
+    "@angular-devkit/architect": "0.1303.5",
+    "@angular-devkit/build-angular": "~13.3.5",
+    "@angular/cli": "^13.3.5",
+    "@angular/compiler-cli": "~13.3.6",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "firebase-tools": "^8.0.0 || ^9.0.0",
@@ -45,6 +45,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "open": "^7.0.3",
-    "typescript": "~4.2.3"
+    "typescript": "~4.6.4"
   }
 }
