--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "@angular/common": "~13.3.6",
     "@angular/compiler": "~13.3.6",
     "@angular/core": "~13.3.6",
-    "@angular/fire": "6.1.5",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.6",
     "@angular/material": "13.3.6",
     "@angular/platform-browser": "~13.3.6",
     "@angular/platform-browser-dynamic": "~13.3.6",
     "@angular/router": "~13.3.6",
-    "firebase": "8.6.2",
+    "firebase": "^9.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1303.5",
+    "@angular-devkit/architect": "^0.1300.4",
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "^13.3.5",
     "@angular/compiler-cli": "~13.3.6",
